# ccoreOS

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.py  limine.conf  linker.ld
src/: CMakeLists.txt  boot.c  boot.h  kmain.c
src/term/: term.c  term.h
src/utils/: string.c  string.h
